MOCKITO CHANGE LOG
==================


Release 1.5.5
--------------------------------

- Improved behavior of the ad-hoc methods of mocks.  (#92)
- Make the shortcut `when(mock).foo().thenReturn()` officially work and just assume
  the user forgot the `None` as return value.



Release 1.5.4 (January 22, 2025)
--------------------------------

- Implement defined behavior for `deepcopy` for mocks.  (#91)



Release 1.5.3 (November 9, 2024)
--------------------------------

- Maintenance release adding support for Python 3.13.



Release 1.5.2 (November 6, 2024)
--------------------------------

- Fixed issue (#86) where you couldn't setup expectations for objects or mocks with an overridden `__eq__` method.



Release 1.5.1 (September 4, 2024)
---------------------------------

- Fixed issue (#82) with methods which have arguments named `value` or `exception`.



Release 1.5.0 (March 4, 2024)
-----------------------------

- @Oracking fixed `expect` to support a string as its first argument.  All
  other functions supported that already.  E.g.

::
    expect('os.path', times=2).exists(...).thenReturn(True)



Release 1.4.0 (August 25, 2022)
-------------------------------

- @avandierast implemented `thenCallOriginalImplementation`.  See #60

::

    # Let `os.path.exists` use the real filesystem (often needed when
    # the testing framework needs itself a working `os.path.exists`
    # implementation) *but* fake a `.flake8` file.
    when(os.path).exists(...).thenCallOriginalImplementation()
    when(os.path).exists('.flake8').thenReturn(True)



Release 1.3.5 (August 18, 2022)
-------------------------------

- Restore compatibility with Python 2.7


Release 1.3.3 (June 23, 2022)
-----------------------------

- Hotfix: Correctly unstub methods extracted to the module level, for example ``random.randint()`` et.al. from the standard library.  See #53


Release 1.3.2 (June 23, 2022)
-----------------------------
